test_scores/negative_dimers/features/O75934.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O75934.pkl.xz